# cv

./: .gitignore  pyproject.toml
lista3/: lista3.ipynb
lista4/: lista4.ipynb
nbs/: image-filtering.ipynb  lista1.ipynb
ppm_images/mine/: airplane.ppm:Zone.Identifier  flower.ppm:Zone.Identifier  gandalf.ppm:Zone.Identifier
